--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.2"
   },
   "dependencies": {
-    "axios": "^0.16.2",
-    "body-parser": "^1.17.2",
-    "express": "^4.15.4",
-    "gh-pages": "^1.1.0",
-    "mongoose": "^5.0.11"
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "gh-pages": "^2.1.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.6.13"
   }
 }
